feat: get notes route
